--- a/src/ CSS/StudentCard.css
+++ b/src/ CSS/StudentCard.css
@@ -10,8 +10,13 @@ img{
     display: inline-block;
     margin: 20px;
     box-shadow: 8px 8px 10px rgb(194, 194, 194);
-   
+    transition: transform .1s; 
 }
+
+.card:hover{
+    transform: scale(1.1);
+}
+
 .font{
     font-size: 10px;
     margin: 20px;
