added custom css to the Blank Slate file

--- a/src/ CSS/BlankSlateStudents.css
+++ b/src/ CSS/BlankSlateStudents.css
@@ -3,3 +3,8 @@
    text-align: center;
    margin: 100px auto auto auto;
 }
+
+.blank-slate-campus{
+   text-align:center;
+   margin: 100px auto auto auto;
+}
